[tool.poetry]
name = "clrs"
version = "0.1.0"
description = ""
authors = ["Asmus Byskov Hansen <asmus.byskov.hansen@lego.com>"]
readme = "README.md"
packages = [{include = "clrs"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
pytest = "^7.4.0"
logging = "^0.4.9.6"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"